--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-COMIC_VINE_API_KEY = "9f083e76d9094923049bb536eb54dc09004bd568"
+COMIC_VINE_API_KEY = ""
 
-GET_CHARACTERS_API = "https://comicvine.gamespot.com/api/characters"
+GET_CHARACTERS_API = ""
