comics page made nav_page partial to be usable for both comic and characters page

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
-COMIC_VINE_API_KEY = ""
+COMIC_VINE_API_KEY = "9f083e76d9094923049bb536eb54dc09004bd568"
 
-GET_CHARACTERS_API = ""
+GET_CHARACTERS_API = "https://comicvine.gamespot.com/api/characters"
+
+GET_COMICS_API = "https://comicvine.gamespot.com/api/issues"
