--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ COMIC_VINE_API_KEY = "9f083e76d9094923049bb536eb54dc09004bd568"
 GET_CHARACTERS_API = "https://comicvine.gamespot.com/api/characters"
 
 GET_COMICS_API = "https://comicvine.gamespot.com/api/issues"
+
+GET_CHARACTER_API = "https://comicvine.gamespot.com/api/character/"
