--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server.js"
   },
   "keywords": [],
@@ -16,6 +16,12 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jest": "^29.5.0",
+    "jsdom": "^22.0.0",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "supertest": "^6.3.3"
   }
 }
