added comic page

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ GET_CHARACTERS_API = "https://comicvine.gamespot.com/api/characters"
 GET_COMICS_API = "https://comicvine.gamespot.com/api/issues"
 
 GET_CHARACTER_API = "https://comicvine.gamespot.com/api/character/"
+
+GET_COMIC_API = "https://comicvine.gamespot.com/api/issue/4000-"
