--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,5 @@ GET_COMICS_API = "https://comicvine.gamespot.com/api/issues"
 GET_CHARACTER_API = "https://comicvine.gamespot.com/api/character/"
 
 GET_COMIC_API = "https://comicvine.gamespot.com/api/issue/4000-"
+
+PORT = 8080
